# ChangeLog for www-client/w3m
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/w3m/ChangeLog,v 1.50 2009/12/13 23:25:21 matsuu Exp $

*w3m-0.5.2-r3 (13 Dec 2009)

  13 Dec 2009; MATSUU Takuto <matsuu@gentoo.org> +w3m-0.5.2-r3.ebuild,
  +files/w3m-0.5.2-gc72.patch:
  boehm-gc 7.2 support.

  12 Dec 2009; Tiago Cunha <tcunha@gentoo.org> w3m-0.5.2-r2.ebuild:
  stable sparc, bug 296051

  09 Dec 2009; Markus Meier <maekke@gentoo.org> w3m-0.5.2-r2.ebuild:
  amd64/x86 stable, bug #296051

  09 Dec 2009; Brent Baude <ranger@gentoo.org> ChangeLog:
  Marking w3m-0.5.2-r2 ~ppc64 for bug 296051

  23 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

*w3m-0.5.2-r2 (15 May 2008)

  15 May 2008; MATSUU Takuto <matsuu@gentoo.org> +files/w3m.mailcap,
  +files/w3m-0.5.2-form.patch, +w3m-0.5.2-r2.ebuild:
  application/xhtml+xml support. Fixed history back issue.

  03 Apr 2008; MATSUU Takuto <matsuu@gentoo.org>
  -files/w3m-0.5.1-security.patch, -files/w3m-w3mman-gentoo.diff,
  -w3m-0.5.1-r4.ebuild, w3m-0.5.2-r1.ebuild:
  Added -j1, bug #215394.
  Removed old version.

  07 Mar 2008; Santiago M. Mola <coldwind@gentoo.org> w3m-0.5.2-r1.ebuild:
  amd64 stable

  05 Feb 2008; Markus Rothe <corsair@gentoo.org> w3m-0.5.2-r1.ebuild:
  Stable on ppc64

  13 Dec 2007; Raúl Porcel <armin76@gentoo.org> w3m-0.5.2-r1.ebuild:
  alpha/ia64/sparc/x86 stable

  15 Oct 2007; Markus Rothe <corsair@gentoo.org> w3m-0.5.2.ebuild:
  Stable on ppc64

*w3m-0.5.2-r1 (27 Sep 2007)

  27 Sep 2007; MATSUU Takuto <matsuu@gentoo.org>
  +files/w3m-0.5.2-ambwidth.patch, +w3m-0.5.2-r1.ebuild:
  Added ambwidth patch for unicode.

  25 Sep 2007; Raúl Porcel <armin76@gentoo.org> w3m-0.5.2.ebuild:
  sparc stable

  13 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org> w3m-0.5.2.ebuild:
  ppc. stable

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>; w3m-0.5.1-r4.ebuild: