@@ -4,8 +4,8 @@ AUX w3m-0.5.2-gc72.patch 769 RMD160 475b22c156c6be49729e9a563d5d5493ba249c4d SHA
 AUX w3m.mailcap 44 RMD160 86f571fda5a25bc7ffe2a2094c2bc590c0395ce0 SHA1 dccd475e42a34e132adfc2aa13c3c789cd2e6fff SHA256 5f3c243df65c4d2e5ceeb1fae285e0f9f6660c7b0fc66bb7e46803c1de1890b5
 DIST w3m-0.5.2.tar.gz 1906812 RMD160 09ce72d8ef5e621a2e49496b63e22f2773edbe79 SHA1 484522547ae6dbb342d3858a2a53a65451e273f9 SHA256 5ff3e5a1f50a4a8e6ddbfdeefbe13d3a7f63538595a8e29f5da504ea46eda646
 EBUILD w3m-0.5.2-r1.ebuild 2970 RMD160 110c3f866b5595e9f07204b9ee59d93a4a0b3113 SHA1 8c3f3b0dfa6f4eeef0a33e523c34c168e08d0725 SHA256 a367f6f136713dc8664a4f6ec52e7a71d2e1d3855e207fc9d5267ed32245681e
-EBUILD w3m-0.5.2-r2.ebuild 3226 RMD160 967c39c860a9c698bf79d7712b6b51680ea7aa9d SHA1 0e6e172f802b54448bbaee6398c3a111a87b9186 SHA256 2d4b332340aa3f1dae274ee2865d00b8e659333654cff03ae1b8a9d73c94e08c
+EBUILD w3m-0.5.2-r2.ebuild 3227 RMD160 cf02e1a22cb2517689e0691f1ff045d94cf6a665 SHA1 f372555079a433741f1915ac1625700822f47ecf SHA256 2d586e2acbd90ff92d3c5ec5cc21c227b7683e409298df16f3e9d24805681a0b
 EBUILD w3m-0.5.2-r3.ebuild 3267 RMD160 07a9acb427d26a68107b0eb6ec555f6ca9094f7e SHA1 cb1493d14eb664cd67266021d169d42b7fccb9f6 SHA256 597a5834ec3db70a308140cfd5e5da70767a5cb84b9e45ee865205155418ed4a
 EBUILD w3m-0.5.2.ebuild 2843 RMD160 80b57f81897b6ee8b6d0d729ec19777da31da5fc SHA1 9b622cf526742f10c3f6f083d1f6ac99bef70695 SHA256 2d03f839d7e08b12e24c75fa3383443bdbc9ccb4b30382fe197af6abffed6843
-MISC ChangeLog 17397 RMD160 cf96dd6a8a0c47037c6bad677cb6b00fb1984a30 SHA1 761e3e10548d3077b0ffe60de493d48a7b87556d SHA256 88882b3e001493e09c883b8b42eb76b6b56719a782cbdbe28f865786817d04ba
+MISC ChangeLog 17506 RMD160 097eae0da87680ca18922267e99ea74937429ced SHA1 f4635e1176c8f12a954fca278db5b615fd409d23 SHA256 ece4f398e37e7e056668e3f5f7d8733de0691475d6e5f1104e0b11d9a4516e07
 MISC metadata.xml 237 RMD160 795d70d06b61c12bd15a97e596afed87747e7553 SHA1 a1a1f21305275c396fb2784bb261595fbf510a6f SHA256 58936b557c67f7e90052564817055decab28947a9934d0b889fa5d7e2901ba6d
