@@ -1,6 +1,9 @@
 # ChangeLog for www-client/w3m
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/w3m/ChangeLog,v 1.50 2009/12/13 23:25:21 matsuu Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/www-client/w3m/ChangeLog,v 1.51 2010/01/01 14:30:28 klausman Exp $
+
+  01 Jan 2010; Tobias Klausmann <klausman@gentoo.org> w3m-0.5.2-r2.ebuild:
+  Stable on alpha, bug #296051
 
 *w3m-0.5.2-r3 (13 Dec 2009)
 
